ENEX FSL/snapshotDownload (1)/objects/ServiceResource.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>Area__c</fullName><externalId>false</externalId><label>Área</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>SGME</fullName><default>false</default><label>SGME</label></value><value><fullName>SGMM</fullName><default>false</default><label>SGMM</label></value><value><fullName>Mesa de ayuda</fullName><default>false</default><label>Mesa de ayuda</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__Efficiency__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Efficiency</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__GanttLabel__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Gantt Label</label><length>80</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__Online_Offset__c</fullName><deprecated>false</deprecated><description>Online offset in minutes</description><externalId>false</externalId><label>Online Offset</label><precision>4</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Picture_Link__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Picture Link</label><required>false</required><trackHistory>false</trackHistory><type>Url</type></fields><fields><fullName>FSL__Priority__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Priority</label><precision>4</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Travel_Speed__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Travel Speed</label><precision>4</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Faena_SGMM__c</fullName><externalId>false</externalId><label>Faena SGMM</label><length>10</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><listViews><fullName>All_ServiceResources</fullName><filterScope>Everything</filterScope><label>Todos los recursos de servicios</label></listViews><listViews><fullName>My_ServiceResources</fullName><filterScope>Mine</filterScope><label>Mis recursos de servicios</label></listViews><listViews><fullName>Recursos_SGME</fullName><columns>Name</columns><columns>LastModifiedDate</columns><columns>LastModifiedBy</columns><columns>RelatedRecord</columns><columns>ResourceType</columns><columns>IsActive</columns><filterScope>Everything</filterScope><filters><field>Area__c</field><operation>equals</operation><value>SGME</value></filters><label>Recursos SGME</label><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>Recursos_SGMM</fullName><columns>Name</columns><columns>RelatedRecord</columns><columns>ResourceType</columns><columns>IsActive</columns><columns>Area__c</columns><filterScope>Everything</filterScope><filters><field>Area__c</field><operation>equals</operation><value>SGMM</value></filters><label>Recursos SGMM</label><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><sharingModel>ReadWrite</sharingModel><validationRules><fullName>FSL__Capacity_Resource_of_Type_Crew</fullName><active>true</active><errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula><errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage></validationRules><validationRules><fullName>FSL__Resource_travel</fullName><active>true</active><errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula><errorDisplayField>FSL__Travel_Speed__c</errorDisplayField><errorMessage>Resource travel speed must be greater than 0.</errorMessage></validationRules></CustomObject>